# check-writer

./: README.md  com.example.CheckWriter.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-com.example.CheckWriter.json/: init
.flatpak-builder/checksums/: x86_64-com.example.CheckWriter.json
data/: com.example.CheckWriter.desktop.in  com.example.CheckWriter.gschema.xml  com.example.CheckWriter.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: check-writer.gresource.xml  check-writer.in  main.py  meson.build  number_to_words.py  window.py  window.ui
